// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editable method renderCell 方法测试 1`] = `
<UNDEFINED>
  [Function]
</UNDEFINED>
`;

exports[`editable method renderDefaultConfig 方法测试 mode=row 1`] = `
<UNDEFINED
  icon={<UNDEFINED />}
  onClick={[Function]}
  style={
    Object {
      "width": "100%",
    }
  }
>
  新增
</UNDEFINED>
`;

exports[`editable method renderDeleteConfirmButton 方法测试 hideDeleteConfirm=false 1`] = `
<UNDEFINED
  onConfirm={[Function]}
  title="确认删除?"
>
  <a
    style={
      Object {
        "marginRight": 8,
      }
    }
  >
    删除
  </a>
</UNDEFINED>
`;

exports[`editable method renderDeleteConfirmButton 方法测试 hideDeleteConfirm=true 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "marginRight": 8,
    }
  }
>
  删除
</a>
`;

exports[`快照测试 Editable全页快照 1`] = `
<ForwardRef(InternalTable)
  bordered={true}
  columns={
    Array [
      Object {
        "dataIndex": "name",
        "key": "name",
        "title": "姓名",
      },
      Object {
        "dataIndex": "age",
        "key": "age",
        "title": "年龄",
      },
      Object {
        "dataIndex": "address",
        "key": "address",
        "title": "住址",
      },
      Object {
        "className": "operation",
        "dataIndex": "操作",
        "render": [Function],
        "title": "操作",
      },
    ]
  }
  components={
    Object {
      "body": Object {
        "row": [Function],
      },
    }
  }
  dataSource={
    Array [
      Object {
        "address": "西湖区湖底公园1号",
        "age": 32,
        "key": "1",
        "name": "胡彦斌",
      },
      Object {
        "address": "西湖区湖底公园1号",
        "age": 42,
        "key": "2",
        "name": "胡彦祖",
      },
    ]
  }
  footer={[Function]}
  pagination={
    Object {
      "current": 1,
      "onChange": [Function],
      "pageSize": 10,
    }
  }
  rowClassName={[Function]}
/>
`;
